# filterspam

./: README.md  manage.py  pyproject.toml
data/: tfidf.joblib  train_model.ipynb
data/.ipynb_checkpoints/: train_model-checkpoint.ipynb
spamfilter/: asgi.py  settings.py  urls.py  wsgi.py
